# SPIDR

./: .gitignore  start_cave_exploration.sh  start_spooder.sh
src/spooder_control/: package.xml  setup.cfg  setup.py
src/spooder_control/config/: ekf.yaml  ros2_control.yaml
src/spooder_control/launch/: gait.launch.py  localization.launch.py
src/spooder_control/scripts/: gait_controller_node  simple_explorer_node
src/spooder_control/spooder_control/: gait_controller.py  ik_solver.py  simple_explorer.py  teleop.py
src/spooder_description/: CMakeLists.txt  package.xml
src/spooder_description/launch/: display.launch.py  display_urdf.launch.py
src/spooder_description/rviz/: config.rviz  depth_camera.rviz
src/spooder_description/urdf/: camera.xacro  imu.xacro  lidar.xacro  spooder.xacro
src/spooder_gazebo/: CMakeLists.txt  package.xml
src/spooder_gazebo/config/: bridge_config.yaml
src/spooder_gazebo/launch/: 01_sim_world.launch.py  02_robot_spawn.launch.py  03_custom_nav.launch.py  03_navigation.launch.py  04_viz.launch.py  05_unified_bringup.launch.py  simulation.launch.py
src/spooder_gazebo/worlds/: cave_world.sdf  maze_world.sdf  rubicon.sdf  test_world.sdf
src/spooder_navigation/: package.xml  setup.cfg  setup.py
src/spooder_navigation/config/: nav2_params.yaml  slam_toolbox_params.yaml
src/spooder_navigation/launch/: navigation.launch.py  slam.launch.py
src/spooder_navigation/rviz/: nav2.rviz
src/spooder_navigation/spooder_navigation/: unstuck_monitor.py
src/spooder_perception/: package.xml  setup.cfg  setup.py
src/spooder_perception/config/: pointcloud_saver_params.yaml
src/spooder_perception/launch/: perception.launch.py
src/spooder_perception/spooder_perception/: pointcloud_saver.py  terrain_analyzer.py
src/spooder_slam_archive/: CMakeLists.txt  package.xml
src/spooder_slam_archive/config/: default.rviz  nav2_default.rviz  nav2_params.yaml  slam_toolbox_params.yaml
src/spooder_slam_archive/launch/: slam.launch.py
