<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spooder_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="daksh.vohra1@gmail.com">daksh</maintainer>
  <license>TODO: License declaration</license>

  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <exec_depend>nav2_rviz_plugins</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
